--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <!--CDN Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
 
+  <!--CDN Google Font-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">  
+  
   <title>PORTFOLIO</title>
 </head>
 <body class="navbar-show">
@@ -17,18 +21,6 @@
     </div>
   </header>
 
-  <div class="d-flex h-100">
-  <div class="h-100 w-50 d-flex bg-light align-items-center">
-    <div class="text-center  d-flex mx-auto">
-      <h1 class="px-3">IROSTUB</h1>
-    </div>
-  </div>
-  <div class="h-100 w-50 d-flex bg-secondary align-items-center">
-    <div class="text-center  d-flex mx-auto">
-      <h1 class="px-3">init portfolio</h1>
-    </div>
-  </div>
-</div>
   <!--CDN Bootstrap Script-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="./app.js"></script>
