--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!--inject Bootstrap CSS-->
   <link rel="stylesheet" href="./scss/custom.css">
   <link rel="stylesheet" href="./style.css">
@@ -15,12 +16,20 @@
   <!--favicon-->
   <link rel=" shortcut icon" href="favicon.ico">
   <link rel="icon" href="favicon.ico">
+
+  <!--github button-->
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+  <!--twitter button-->
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
   <title>PORTFOLIO</title>
 </head>
 
 <body class="d-flex flex-wrap justify-content-center navbar-show">
   <!--navigation bar-->
-  <header class="navbar navbar-expand-md navbar-top navbar-dark bg-dark fixed-top">
+  <header class="navbar navbar-expand-md navbar-top navbar-dark bg-black flex-column fixed-top">
+    <span class="bar fixed-top"><span></span></span>
     <div class="container">
       <a class="navbar-brand" href="#">Irostub</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupport"
@@ -48,11 +57,34 @@
 
   <!--main content-->
   <main class="flex-grow-1 position-relative">
-    <div class="bg-dark py-150 text-white">
-      <div class="container text-center">
-        <span>hello world</span>
+    <!--section 1-->
+    <section class="bg-grayBlack">
+      <div class="pt-13 pb-11-4 text-white text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12 mb-5">
+              <h1 class="fs-1 mb-4">Designer, Back-end Developer</h1>
+              <p>better code, better design That's my pleasure</p>
+            </div>
+            <div class="col-12 logo">
+              <img src="./image/logo.png" class="mt-5 img-fluid" alt="logo">
+            </div>
+            <div class="col-12">
+              <div class="mt-5 pt-5">
+                <a class="github-button" href="https://github.com/irostub"
+                  aria-label="Follow @irostub on GitHub">Follow@irostub</a>
+                <a href="https://twitter.com/irostub_t?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+                  data-show-screen-name="false" data-lang="en" data-show-count="false">Follow @irostub_t</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
+    <section>
+      <div></div>
+    </section>
   </main>
   <!--CDN Bootstrap Script-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -68,12 +100,11 @@
     <div class="container">
       <div class=""></div>
       <div class="p-5 text-white text-center col-12">
-        <span class="fs-1">Designer, Back-end Developer</span>
-        <span>better code, better design That's my pleasure</span>
+        
       </div>
       <div class="mt-5 d-flex justify-content-center">
-        <div class="main-logo">
-          <img src="./image/logo.png" class="img-fluid" alt="logo">
+        <div class="main-">
+          
         </div>
       </div>
     </div>
