--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="d-flex flex-wrap justify-content-center navbar-show">
   <!--navigation bar-->
   <header class="navbar navbar-expand-md navbar-top navbar-dark bg-black flex-column fixed-top">
-    <span class="bar fixed-top"><span></span></span>
+    <span class="bar fixed-top"><span id="scrollbar"></span></span>
     <div class="container">
       <a class="navbar-brand" href="#">Irostub</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupport"
@@ -82,14 +82,20 @@
       </div>
     </section>
 
-    <section>
-      <div></div>
+    <section class="bg-white">
+      <div class="pt-13 pb-11-4 text-dark text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12 mb-5">NEXT SECTION</div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <!--CDN Bootstrap Script-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+  <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+    </script>
   <script src="./app.js"></script>
 </body>
 
