--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="section" id="section1">
-    <div class="slide"><h1>SECTION1-0</h1></div>
+    <div class="slide"><h1>SECTION1-0(0)</h1></div>
     <div class="slide active"><h1>SECTION1-1</h1></div>
     <div class="slide"><h1>SECTION1-2</h1></div>
     <div class="slide"><h1>SECTION1-3</h1></div>
